WexGit/Wex_DX/force-app/main/default/objects/SBQQ__ProductOption__c/fields/Optional_SKU_Id__c.field-meta.xml
<CustomField>
    <fullName>Optional_SKU_Id__c</fullName>
    <formula>CASESAFEID(SBQQ__OptionalSKU__r.Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Optional SKU Id</label>
    <type>Text</type>
</CustomField>