WexGit/Wex_DX/force-app/main/default/objects/SBQQ__ProductOption__c/fields/Product_Option_Safe_ID__c.field-meta.xml
<CustomField>
    <fullName>Product_Option_Safe_ID__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Option Safe ID</label>
    <type>Text</type>
</CustomField>