WexGit/Wex_DX/force-app/main/default/objects/SBQQ__ProductOption__c/fields/Required_by_Program__c.field-meta.xml
<CustomField>
    <fullName>Required_by_Program__c</fullName>
    <formula>IF( SBQQ__Required__c = true, SBQQ__ConfiguredSKU__r.Program_Name__c, null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Required by Program</label>
    <type>Text</type>
</CustomField>