WexGit/Wex_DX/force-app/main/default/objects/SBQQ__ProductOption__c/fields/Required_by_SKU_Id__c.field-meta.xml
<CustomField>
    <fullName>Required_by_SKU_Id__c</fullName>
    <formula>CASESAFEID( SBQQ__ConfiguredSKU__r.Id )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Required by SKU Id</label>
    <type>Text</type>
</CustomField>